fix name of pybind module creation file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 4.0.0)
 project(dumbpy)
 add_subdirectory(pybind11)
-pybind11_add_module(dumbpy src/hello.cpp)
+pybind11_add_module(dumbpy src/exposePythonFunctionsAndClasses.cpp)
