rename backend: dumbpy --> _dumbpy_core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.25.1)
 project(dumbpy)
 add_subdirectory(pybind11)
-pybind11_add_module(dumbpy src/exposePythonFunctionsAndClasses.cpp)
+pybind11_add_module(_dumbpy_core src/exposePythonFunctionsAndClasses.cpp)
